--- a/DayCare/DayCare/packages.config
+++ b/DayCare/DayCare/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="Caliburn.Micro" version="3.0.0-beta1" targetFramework="net452" />
   <package id="Caliburn.Micro.Core" version="3.0.0-beta1" targetFramework="net452" />
+  <package id="ClosedXML" version="0.76.0" targetFramework="net45" />
   <package id="DocumentFormat.OpenXml" version="2.5" targetFramework="net45" />
 </packages>
