adding new business layer

--- a/DayCare/DayCare/DayCare.csproj
+++ b/DayCare/DayCare/DayCare.csproj
@@ -96,6 +96,7 @@
     <Compile Include="Core\Reports\ColumnId.cs" />
     <Compile Include="Core\Reports\CustomStyleSheet.cs" />
     <Compile Include="Core\Reports\DateCell.cs" />
+    <Compile Include="Core\Reports\DayInfo.cs" />
     <Compile Include="Core\Reports\ExcelFile.cs" />
     <Compile Include="Core\Reports\MonthListReport.cs" />
     <Compile Include="Core\Reports\PhoneListReport.cs" />
@@ -105,6 +106,7 @@
     <Compile Include="Core\TaskManager.cs" />
     <Compile Include="Core\XmlBaseConfig.cs" />
     <Compile Include="Database\DatabaseEngine.Account.cs" />
+    <Compile Include="Database\DatabaseEngine.Child.cs" />
     <Compile Include="Database\DatabaseEngine.cs" />
     <Compile Include="Database\DatabaseEngine.Member.cs" />
     <Compile Include="Database\DatabaseIgnoreAttribute.cs" />
@@ -113,21 +115,24 @@
     <Compile Include="Database\Model\DatabaseRecord.cs" />
     <Compile Include="Database\Model\Holiday.cs" />
     <Compile Include="Database\Model\Member.cs" />
+    <Compile Include="Database\Model\Schedule.cs" />
+    <Compile Include="Database\Model\ScheduleDetail.cs" />
     <Compile Include="Database\QueryInfo.cs" />
     <Compile Include="DayCareBootstrapper.cs" />
     <Compile Include="Model\Account.cs" />
     <Compile Include="Model\Child.cs" />
-    <Compile Include="Model\Database\Expense.cs" />
-    <Compile Include="Model\Database\GroupSchedule.cs" />
-    <Compile Include="Model\Database\Petoeter.cs" />
-    <Compile Include="Model\Database\Presence.cs" />
-    <Compile Include="Model\Database\Schedule.cs" />
-    <Compile Include="Model\Database\Synchronizer.cs" />
-    <Compile Include="Model\Database\SystemSetting.cs" />
-    <Compile Include="Model\Database\Updates\DatabaseUpdate.cs" />
+    <Compile Include="Model\Databasee\Expense.cs" />
+    <Compile Include="Model\Databasee\GroupSchedule.cs" />
+    <Compile Include="Model\Databasee\Petoeter.cs" />
+    <Compile Include="Model\Databasee\Presence.cs" />
+    <Compile Include="Model\Databasee\Schedule.cs" />
+    <Compile Include="Model\Databasee\Synchronizer.cs" />
+    <Compile Include="Model\Databasee\Updates\DatabaseUpdate.cs" />
     <Compile Include="Model\DataObject.cs" />
     <Compile Include="Model\Member.cs" />
     <Compile Include="Model\Petoeter.cs" />
+    <Compile Include="Model\Schedule.cs" />
+    <Compile Include="Model\SystemSettings.cs" />
     <Compile Include="Model\Tasks\AddAccountTask.cs" />
     <Compile Include="Model\Tasks\EditAccountTask.cs" />
     <Compile Include="Model\UI\BaseItemUI.cs" />
@@ -145,10 +150,11 @@
     <Compile Include="ViewModels\Children\ChildUI.cs" />
     <Compile Include="ViewModels\Children\EditChildViewModel.cs" />
     <Compile Include="ViewModels\Members\MemberUI.cs" />
-    <Compile Include="ViewModels\UICore\BackScreen.cs" />
+    <Compile Include="ViewModels\UICore\BackMenu.cs" />
     <Compile Include="ViewModels\UICore\BaseScreen.cs" />
     <Compile Include="ViewModels\UICore\FilteredListItemScreen.cs" />
     <Compile Include="ViewModels\UICore\ListItemScreen.cs" />
+    <Compile Include="ViewModels\UICore\MenuBar.cs" />
     <Compile Include="ViewModels\UICore\TaggedItem.cs" />
     <Compile Include="ViewModels\Dashboard\DashBoardViewModel.cs" />
     <Compile Include="ViewModels\Dialogs\DateDialogViewModel.cs" />
