added exception to schedule 1

--- a/DayCare/DayCare/DayCare.csproj
+++ b/DayCare/DayCare/DayCare.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Database\DatabaseEngine.Child.cs" />
     <Compile Include="Database\DatabaseEngine.cs" />
     <Compile Include="Database\DatabaseEngine.Member.cs" />
+    <Compile Include="Database\DatabaseEngine.Schedule.cs" />
     <Compile Include="Database\DatabaseIgnoreAttribute.cs" />
     <Compile Include="Database\Model\Account.cs" />
     <Compile Include="Database\Model\Child.cs" />
